# atomlite

./: .gitignore  LICENSE  README.rst  justfile  pyproject.toml
.github/workflows/: build_and_publish_testing_image.yaml  publish_release.yaml  tests.yaml
benchmarks/: benchmark_database.py
data/: atomlite.db  molecules.sdf
docker_testing_environment/: Dockerfile
docs/source/: conf.py  index.rst  modules.rst
docs/source/_templates/: class.rst
examples/: create_database.py  from_sdf.py  read_database.py  write_chembl.py
src/atomlite/: __init__.py
src/atomlite/_internal/: database.py  json.py
src/atomlite/_internal/scripts/: atomlite.py
tests/: test_database.py  test_json_serde.py
