[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "atomlite"
maintainers = [
  { name = "Lukas Turcani", email = "lukasturcani93@gmail.com" },
]

dependencies = [
  "rdkit",
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"


[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "numpy",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "build",
  "twine",
  "furo",
  "pip-tools",
]

[project.urls]
github = "https://github.com/lukasturcani/atomlite"
documentation = "https://atomlite.readthedocs.io"

[tool.setuptools.package-data]
atomlite = [
  "py.typed",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 79
extend-select = ["I"]

[tool.black]
line-length = 79

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "rdkit.*"
]
ignore_missing_imports = true
